# mknmplotssheets

./: .gitignore  README.md  pyproject.toml
mknmplots/: __init__.py  mknplot.py
mknmplots/static/: mknplotstyle.mplstyle
tests/: test.py
