[tool.poetry]
name = "mknmplots"
version = "0.1.0"
description = ""
authors = ["Marcelo-Kenji-Noda <nodamarcelokenjinoda@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pydantic = "^2.10.6"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
